--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="container">
 		<div class="self">
 			<h2>自我介绍</h2>
-			<p>学号：2023141210116</p>
+			<p>学号：2023141210xxx</p>
 			<p>姓名：张菠</p>
 			<p>学院：数学学院</p>
 			<p>家乡：重庆</p>
